--- a/Yeoman/app/styles/play.css
+++ b/Yeoman/app/styles/play.css
@@ -1,192 +1,300 @@
 @import url("fonts.css");
 
 .play-container-div{
-    width: 90vw;
-    /*height: 100vh;*/ /* DIN CAUZA CA ASA .......... sa apara alea de jos....*/
+    width: 180vw;
+    height: 100vh;
     left: 0;
     right: 0;
     padding: 0;
     margin: 0;
     /*border: solid;*/
     overflow: hidden;
-
 }
 
 .play-main-div{
     position: static;
-    display: block
-    margin: auto;
-    height: 80vh;
-    width: 70vw;
+    display: block;
+    height: 89vh;
+    width: 100vw;
     background-size: contain;
     overflow: hidden;
     color: #FFF;
     font-family: "FreeMono", monospace;
     text-align: center;
     font-size: 2vw;
-    background-image: url('/images/backgrounds/arena.jpg');
+    background-image: url('/images/backgrounds/tileable-blue.jpg');
     clear: both;
-    border: groove;
-    margin: 5vh 0vw 3vw 15vw; /*  */
-    padding: 2vw 0 2vw 2vw;
+    margin: 0 0 0 0; /*  */
+    padding: 0 0 0 0;
     left: 0;
     right: 0;
-    float: left;
-
 }
 .play-health-div{
     width: 100%;
+    height: auto;//////////////////////////////////////////////////////////////////////////////////////
     left: 0;
     right: 0;
     background-color: rgba(0,0,0,0.5);
+      overflow:hidden;
+}
+h1{
+  font-size: 4vmin;
+  margin: 0;
+  padding: 0;
 }
 .play-footer-div {
+    display: inline-flex;
+    position: absolute;
     margin-left: 0px;
     padding-left: 0px;
     border-left: 0px;
-    bottom: 0;
-    top: 100%;
-    height: auto;
-    width: 100%;
-    overflow: hidden;
+    height: 28%;////////////////////////////////////////////////////////////////
+    width: 100%.;
+    /*overflow: hidden;*/
     left: 0;
     right: 0;
-    background-color: rgba(0,0,0,0.5);
-
-}
-.object{
-    width: 15vw;
-    padding: 3vw;
-    padding-top: 30vh;
-}
-.object:hover {
-    transform: scale(1.5, 1.5);
-}
-.button {
-    display: inline-block;
-    padding: 1vw 1vh;
-    font-size: 1em;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-    background-color: #4CAF50;
-    border: none;
-    border-radius: 8vw;
-    box-shadow: 0 1vh #999;
-    width: auto;
-}
-
-.button:hover {background-color: #3e8e41}
-
-.button:active {
-    background-color: #3e8e41;
-    box-shadow: 0 1vh #333;
-    transform: translateY(2vw);
-}
-
-.play-all-buttons{
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    right: 0;
-    top: 0;
     bottom: 0;
+    min-height: 20%;
+    background-color: rgba(0,0,0,0.75);
 }
-.play-below-game-div{
-  position: relative;
-  display: inline-flex;
-  margin-bottom: 5%;
+
+.play-answer-column-div{
+  font-size: 2.5vmin;
+  border: solid 1vh #b188fe;
+  width: 33.33%;
+  height: 100%;
+  line-height: 92%;
+  cursor: pointer;
+  min-height: 100%;
 }
+.play-answer-column-div:hover{
+    background-color: rgb(31, 121, 254, 0.7);
+    font-weight: bold;
+    overflow: hidden;
+    border-color: #ffa203;
+    transform: scale(1.0, 1.1) translateY(-7%);
+}
+
+.play-middle-parent{
+  display: flex;
+  justify-content: space-between;
+}
+
 .play-player-profile-div{
-
-    /*display: block;*/
-    width: 35vw;
-    height: 45vh;
-    border: groove;
+    background-color: #cad8eb;
+    opacity: 0.9;
+    display: inline;
+    overflow: hidden;
+    width: 25vw;
+    height: 30vmin;
+    line-height: 92%;
     top: 0;
-    margin-left: 15vw;
+    margin-left: 0;
+    margin-top: 1.5vh;
+    margin-left: .2vw;
     clear: both;
+    visibility: hidden;
+    border-radius: 3vw;
+    border-color: yellow;
+    border-style: ridge;
+    left: 4.2vw;
 }
 .play-current-players-div{
+  background-color: #cad8eb;
+  opacity: 0.9;
   display: inline;
   position: relative;
   float: right;
-  width: 35vw;
-  border: groove;
+  width: 25vw;
+  height: 30vmin;//////////////////////////////////////////////////////
   top: 0;
   margin: 0;
-  margin-right: 15vw;
+  margin-top: 1.5vh;
+  margin-right: .2vw;
+  border-radius: 3vw;
+  border-color: yellow;
+  border-style: ridge;
+  overflow: hidden;
   clear: both;
+  visibility: hidden;
 }
 .play-profile-pic{
   display: block;
-  width: 30%;
-  height: auto;
+  width: 11vmin;
+  height: 11vmin;
   margin: auto;
   border-radius: 50%;
   border: solid;
-  border-color: blue;
+  border-color: #fe1d00;
   clear: both;
 }
 
 .play-username-p{
     display: block;
     position: static;
-    margin-left: 1vw;
-    font-family: Impact, Charcoal, sans-serif;
+    margin-left: 0;
+    font-family: 'FreeMono', monospace;
     font-style: italic;
-    font-size: 2vw;
-    color: #654feb;
+    font-size: 3vmin;
+    font-weight: bold;
+    color: #da530f;
     margin: 0;
     padding: 0;
     right: 0;
+    left: 0;
     /*font-weight: bold;*/
 }
-.play-nr-jocuri-p{
+
+.play-profile-text{
   display: inline;
   position: static;
   /*margin-left: 1vw;*/
-  font-family: Arial, Charcoal, sans-serif;
+  font-family: 'FreeMono', monospace;
   font-style: italic;
-  font-size: 1vw;
-  color: #3f40c1;
+  font-size: 2vmin;
+  color: #f21a00;
   font-weight: bold;
 }
-.play-val-nr-jocuri-p{
-  display: inline;
-  position: static;
-  /*margin-left: 1vw;*/
-  font-family: Arial, Charcoal, sans-serif;
-  /*font-style: italic;*/
-  font-size: 1vw;
-  color: #a10ceb;
-}
-.play-nr-joc-p{
-  display: inline;
-  position: static;
-  /*margin-left: 1vw;*/
-  font-family: Arial, Charcoal, sans-serif;
-  font-style: italic;
-  font-size: 1vw;
-  color: #3f40c1;
-  font-weight: bold;
-}
-.play-val-nr-joc-p{
-  display: inline;
-  position: static;
-  /*margin-left: 1vw;*/
-  font-family: Arial, Charcoal, sans-serif;
-  /*font-style: italic;*/
-  font-size: 1vw;
-  color: #a10ceb;
-}
+
 .play-current-player{
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  font-size: 1.3vw;
+  font-family: "FreeMono", monospace;
+  font-size: 2vmin;
   font-style: italic;
   font-weight: bold;
-  color: #a10ceb;
+  color: #531000;
+}
+
+#play-me-button{
+  background-color: #cad8eb;
+  opacity: .95;
+  overflow: hidden;
+  display: inline;
+  width: auto;
+  height: 4vh;
+  /*height: auto; ////////////////////////////////////////////////////////////////////////*/
+  border: solid 1px yellow;
+  border-radius: .5vh;
+  color: #da530f;
+  top: 0;
+  margin: 0;
+  margin-top: 1.5vh;
+  font-size: 2vmin;
+  clear: both;
+  float: left;
+}
+
+#play-enemies-button{
+  background-color: #cad8eb;
+  opacity: .95;
+  display: inline;
+  width: auto;
+  height: 4vh;
+  /*height: auto; ////////////////////////////////////////////////////////////////////////*/
+  border: solid 1px yellow;
+  border-radius: .5vh;
+  float: right;
+  margin: 0;
+  margin-right: .5vw;
+    color: #da530f;
+  top: 0;
+  font-size: 2.5vmin;
+  clear: both;
+}
+@media all and (orientation: portrait) {
+  .play-footer-div {
+    display: flex;
+    justify-content: space-between;
+      flex-direction: column;
+      position: absolute;
+      margin-left: 0px;
+      padding-left: 0px;
+      border-left: 0px;
+      height: 35%;
+      width: 100%.;
+      /*overflow: hidden;*/
+      left: 0;
+      right: 0;
+      bottom: 0;
+      min-height: 20%;
+      background-color: rgba(0,0,0,0.75);
+  }
+  .play-answer-column-div{
+    font-size: 2.5vmin;
+    border: solid .6vw #b188fe;
+    width: 100%;
+    height: 33.33%;
+    line-height: 92%;
+    cursor: pointer;
+    min-height: 15%;
+    min-width: 100%;
+  }
+  #play-me-button{
+    background-color: #cad8eb;
+    opacity: .95;
+    overflow: hidden;
+    display: inline;
+    width: auto;
+    height: 8vh;
+    /*height: auto; ////////////////////////////////////////////////////////////////////////*/
+    border: solid 1px yellow;
+    border-radius: .5vh;
+    color: #da530f;
+    top: 0;
+    margin: 0;
+    margin-top: 1.5vh;
+    font-size: .8em;
+    clear: both;
+    float: left;
+  }
+
+  #play-enemies-button{
+    background-color: #cad8eb;
+    opacity: .95;
+    display: inline;
+    width: auto;
+    height: 8vh;
+    /*height: auto; ////////////////////////////////////////////////////////////////////////*/
+    border: solid 1px yellow;
+    border-radius: .5vh;
+    float: right;
+    margin: 0;
+    margin-top: 1.5vh;
+    margin-right: .5vw;
+      color: #da530f;
+    top: 0;
+    font-size: .8em;
+    clear: both;
+  }
+  .play-player-profile-div{
+      background-color: #cad8eb;
+      opacity: 0.9;
+      display: inline;
+      overflow: hidden;
+      width: 32vw;
+      height: 30vmin; ////////////////////////////////////////////////////////////////////////
+      top: 0;
+      margin-left: 0;
+      margin-top: 1.5vh;
+      clear: both;
+      visibility: hidden;
+      border-radius: 3vw;
+      left: 4.2vw;
+  }
+  .play-current-players-div{
+    background-color: #cad8eb;
+    opacity: 0.9;
+    display: inline;
+    position: relative;
+    float: right;
+    width: 32vw;
+    height: auto;
+    line-height: 92%;
+    top: 0;
+    margin: 0;
+    margin-top: 1.5vh;
+    border-radius: 3vw;
+    overflow: hidden;
+    clear: both;
+    visibility: hidden;
+  }
 }
