--- a/Yeoman/app/views/play.html
+++ b/Yeoman/app/views/play.html
@@ -27,10 +27,10 @@
     <div class="play-current-players-div" id="player-enemies-id" data-ng-click="setEnemiesVisible()">
       <p style="opacity: 1; font-weight: bold; margin: auto; font-family: 'FreeMono', monospace; font-size: 2vw; color: #da530f;text-decoration: underline;"> Now playing:
         <ol>
-          <li class="play-current-player">Steven</p>
-          <li class="play-current-player">Adam</p>
+          <li class="play-current-player">William</p>
+          <li class="play-current-player">Nicole</p>
           <li class="play-current-player">Kit Kat</p>
-          <li class="play-current-player">Quincy</p>
+          <li class="play-current-player">Megan</p>
         </ol>
     </div>
         <button type="button" id="play-enemies-button" data-ng-click="setEnemiesVisible()">Enemies</button>
