--- a/Yeoman/app/styles/leaderboard.css
+++ b/Yeoman/app/styles/leaderboard.css
@@ -1,5 +1,3 @@
-@import url("fonts.css");
-
 .leaderboard-container-div{
     width: 180vw;
     height: 100vh;
@@ -8,21 +6,20 @@
     padding: 0;
     margin: 0;
     /*border: solid;*/
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .leaderboard-main-div{
     position: static;
     display: block;
-    height: 89vh;
+    /*height: 89vh;*/
     width: 100vw;
-    background-size: contain;
-    overflow: hidden;
-    color: #FFF;
-    font-family: "FreeMono", monospace;
+    /*overflow: hidden;*/
+    color: #000;
+    font-family: "FreeSans", sans-serif;
     text-align: center;
     font-size: 2vw;
-    background-image: url('/images/backgrounds/tileable-blue.jpg');
+    background-image: url('/images/backgrounds/circuit.jpg');
     clear: both;
     margin: 0 0 0 0; /*  */
     padding: 0 0 0 0;
@@ -35,6 +32,11 @@ h1{
   margin: 0;
   padding: 0;
 }
+
+.leaderboard-title{
+  color: #FFF;
+}
+
 .leaderboard-footer-div {
     display: inline-flex;
     position: absolute;
@@ -51,61 +53,20 @@ h1{
     background-color: rgba(0,0,0,0.75);
 }
 
-
 .leaderboard-middle-parent{
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-around;
 }
-
-.leaderboard-player-profile-div{
+.leaderboard-middle-child{
     background-color: #cad8eb;
     opacity: 0.9;
-    display: inline;
-    overflow: hidden;
     width: 25vw;
-    height: 30vmin;
-    line-height: 92%;
-    top: 0;
-    margin-left: 0;
-    margin-top: 1.5vh;
-    margin-left: .2vw;
-    clear: both;
     border-radius: 3vw;
     border-color: yellow;
-    border-style: ridge;
-    left: 4.2vw;
-}
-.leaderboard-current-players-div{
-  background-color: #cad8eb;
-  opacity: 0.9;
-  display: inline;
-  position: relative;
-  float: right;
-  width: 25vw;
-  height: 30vmin;
-  top: 0;
-  margin: 0;
-  margin-top: 1.5vh;
-  margin-right: .2vw;
-  border-radius: 3vw;
-  border-color: yellow;
-  border-style: ridge;
-  overflow: hidden;
-  clear: both;
-  visibility: hidden;
-}
-.leaderboard-profile-pic{
-  display: block;
-  width: 11vmin;
-  height: 11vmin;
-  margin: auto;
-  border-radius: 50%;
-  border: solid;
-  border-color: #fe1d00;
-  clear: both;
+    border-style: solid;
 }
 
-.leaderboard-username-p{
+.leaderboard-username-player{
     display: block;
     position: static;
     margin-left: 0;
@@ -113,7 +74,23 @@ h1{
     font-style: italic;
     font-size: 3vmin;
     font-weight: bold;
-    color: #da530f;
+    color: #F00;
+    margin: 0;
+    padding: 0;
+    right: 0;
+    left: 0;
+    /*font-weight: bold;*/
+}
+
+.leaderboard-username-other{
+    display: block;
+    position: static;
+    margin-left: 0;
+    font-family: 'FreeMono', monospace;
+    font-style: italic;
+    font-size: 3vmin;
+    font-weight: bold;
+    color: #060;
     margin: 0;
     padding: 0;
     right: 0;
@@ -128,7 +105,7 @@ h1{
   font-family: 'FreeMono', monospace;
   font-style: italic;
   font-size: 2vmin;
-  color: #f21a00;
+  color: #333;
   font-weight: bold;
 }
 
