--- a/Yeoman/app/styles/play.css
+++ b/Yeoman/app/styles/play.css
@@ -1,5 +1,3 @@
-@import url("fonts.css");
-
 .play-container-div{
     width: 180vw;
     height: 100vh;
@@ -16,13 +14,12 @@
     display: block;
     height: 89vh;
     width: 100vw;
-    background-size: contain;
     overflow: hidden;
     color: #FFF;
     font-family: "FreeMono", monospace;
     text-align: center;
     font-size: 2vw;
-    background-image: url('/images/backgrounds/tileable-blue.jpg');
+    background-image: url('/images/backgrounds/circuit.jpg');
     clear: both;
     margin: 0 0 0 0; /*  */
     padding: 0 0 0 0;
@@ -31,7 +28,7 @@
 }
 .play-health-div{
     width: 100%;
-    height: auto;//////////////////////////////////////////////////////////////////////////////////////
+    height: auto;
     left: 0;
     right: 0;
     background-color: rgba(0,0,0,0.5);
@@ -48,8 +45,8 @@ h1{
     margin-left: 0px;
     padding-left: 0px;
     border-left: 0px;
-    height: 28%;////////////////////////////////////////////////////////////////
-    width: 100%.;
+    height: 28%;
+    width: 100%;
     /*overflow: hidden;*/
     left: 0;
     right: 0;
@@ -106,7 +103,7 @@ h1{
   position: relative;
   float: right;
   width: 25vw;
-  height: 30vmin;//////////////////////////////////////////////////////
+  height: 30vmin;
   top: 0;
   margin: 0;
   margin-top: 1.5vh;
@@ -210,7 +207,7 @@ h1{
       padding-left: 0px;
       border-left: 0px;
       height: 35%;
-      width: 100%.;
+      width: 100%;
       /*overflow: hidden;*/
       left: 0;
       right: 0;
@@ -271,7 +268,7 @@ h1{
       display: inline;
       overflow: hidden;
       width: 32vw;
-      height: 30vmin; ////////////////////////////////////////////////////////////////////////
+      height: 30vmin;
       top: 0;
       margin-left: 0;
       margin-top: 1.5vh;
