--- a/Yeoman/app/styles/stats.css
+++ b/Yeoman/app/styles/stats.css
@@ -1,5 +1,3 @@
-@import url("fonts.css");
-
 .stats-container-div{
     width: 180vw;
     height: 100vh;
@@ -7,8 +5,6 @@
     right: 0;
     padding: 0;
     margin: 0;
-    /*border: solid;*/
-    overflow: hidden;
 }
 
 .stats-main-div{
@@ -16,15 +12,13 @@
     display: block;
     height: 89vh;
     width: 100vw;
-    background-size: contain;
-    overflow: hidden;
-    color: #FFF;
-    font-family: "FreeMono", monospace;
+    color: #000;
+    font-family: "FreeSans", sans-serif;
     text-align: center;
     font-size: 2vw;
-    background-image: url('/images/backgrounds/tileable-blue.jpg');
+    background-image: url('/images/backgrounds/circuit.jpg');
     clear: both;
-    margin: 0 0 0 0; /*  */
+    margin: 0 0 0 0;
     padding: 0 0 0 0;
     left: 0;
     right: 0;
@@ -35,6 +29,11 @@ h1{
   margin: 0;
   padding: 0;
 }
+
+.stats-title{
+  color: #FFF;
+}
+
 .stats-footer-div {
     display: inline-flex;
     position: absolute;
@@ -51,62 +50,31 @@ h1{
     background-color: rgba(0,0,0,0.75);
 }
 
-.stats-middle-parent{
-  display: flex;
-  justify-content: space-between;
-}
-
 .stats-player-profile-div{
     background-color: #cad8eb;
     opacity: 0.9;
-    display: inline;
-    overflow: hidden;
     width: 25vw;
-    height: 30vmin;
-    line-height: 92%;
-    top: 0;
-    margin-left: 0;
-    margin-top: 1.5vh;
-    margin-left: .2vw;
-    clear: both;
     border-radius: 3vw;
     border-color: yellow;
-    border-style: ridge;
-    left: 4.2vw;
-}
-.stats-current-players-div{
-  background-color: #cad8eb;
-  opacity: 0.9;
-  display: inline;
-  position: relative;
-  float: center;
-  width: 25vw;
-  height: 30vmin;
-  top: 0;
-  margin: 0;
-  margin-top: 1.5vh;
-  margin-right: .2vw;
-  border-radius: 3vw;
-  border-color: yellow;
-  border-style: ridge;
-  overflow: hidden;
-  clear: both;
-}
-.stats-profile-pic{
-  display: block;
-  width: 11vmin;
-  height: 11vmin;
-  margin: auto;
-  border-radius: 50%;
-  border: solid;
-  border-color: #fe1d00;
-  clear: both;
+    border-style: solid;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.stats-username-p{
+.stats-profile-pic{
+    display: block;
+    width: 11vmin;
+    height: 11vmin;
+    margin: auto;
+    border-radius: 50%;
+    border: solid;
+    border-color: #fe1d00;
+    clear: both;
+}
+
+.stats-username-player{
     display: block;
     position: static;
-    margin-left: 0;
     font-family: 'FreeMono', monospace;
     font-style: italic;
     font-size: 3vmin;
@@ -114,20 +82,18 @@ h1{
     color: #da530f;
     margin: 0;
     padding: 0;
-    right: 0;
-    left: 0;
     /*font-weight: bold;*/
 }
 
 .stats-profile-text{
-  display: inline;
-  position: static;
-  margin-left: 1vw;
-  font-family: 'FreeMono', monospace;
-  font-style: italic;
-  font-size: 2vmin;
-  color: #f21a00;
-  font-weight: bold;
+    display: inline;
+    position: static;
+    /*margin-left: 1vw;*/
+    font-family: 'FreeMono', monospace;
+    font-style: italic;
+    font-size: 2vmin;
+    color: #f21a00;
+    font-weight: bold;
 }
 
 .stats-current-player{
