--- a/Yeoman/app/views/stats.html
+++ b/Yeoman/app/views/stats.html
@@ -1,12 +1,15 @@
 <div class="stats-container-div">
     <div class="stats-main-div">
+        <div class="stats-title">Stats</div>
         <div class="stats-player-profile-div">
             <img src="/images/profiles/k1.png" class="stats-profile-pic"/>
-            <p class="stats-username-p" style="margin-bottom: 0">> Kit Kat</p>
+            <p class="stats-username-player" style="margin-bottom: 0">> Kit Kat</p>
             <p class="stats-profile-text" style="margin-bottom: 0;">Level: </p>
-            <p class="stats-profile-text" style="margin-bottom: 0;">*****</p><br />
+            <p class="stats-profile-text" style="margin-bottom: 0;">&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</p><br />
             <p class="stats-profile-text" style="margin-bottom: 0;">No. of games played: </p>
-            <p class="stats-profile-text" style="margin-bottom: 0;">1789</p>
+            <p class="stats-profile-text" style="margin-bottom: 0;">157</p><br />
+            <p class="stats-profile-text" style="margin-bottom: 0;">Maximum score: </p>
+            <p class="stats-profile-text" style="margin-bottom: 0;">238</p>
         </div>
     </div>
 </div>
