--- a/Yeoman/app/views/leaderboard.html
+++ b/Yeoman/app/views/leaderboard.html
@@ -1,8 +1,8 @@
-<div class="leaderboard-container-div">
-    <div class="leaderboard-main-div">
-        <div class="leaderboard-title">Leaderboard</div>
-        <div class="leaderboard-middle-parent">
-            <div class="leaderboard-middle-child">
+<div class="leaderboard-container-div"><!-- Container-ul paginii-->
+    <div class="leaderboard-main-div"><!--div-ul principal-->
+        <div class="leaderboard-title">Leaderboard</div><!--Titlul-->
+        <div class="leaderboard-middle-parent"><!--Un flexbox-->
+            <div class="leaderboard-middle-child"><!--Prima coloana - scorul de azi-->
                 <h1>Today</h1>
                 <p class="leaderboard-position" style="margin-bottom: 0">1.</p>
                 <p class="leaderboard-username-player" style="margin-bottom: 0">> Kit Kat</p>
@@ -40,7 +40,7 @@
                 <p class="leaderboard-profile-text" style="margin-bottom: 0;">Maximum score: </p>
                 <p class="leaderboard-profile-text" style="margin-bottom: 0;">50</p>
             </div>
-            <div class="leaderboard-middle-child">
+            <div class="leaderboard-middle-child"><!--A doua coloana - scorul total-->
                 <h1>All Time</h1>
                 <p class="leaderboard-position" style="margin-bottom: 0">1.</p>
                 <p class="leaderboard-username-other" style="margin-bottom: 0">> Aaron Cooper</p>
