--- a/Yeoman/app/views/stats.html
+++ b/Yeoman/app/views/stats.html
@@ -1,7 +1,7 @@
-<div class="stats-container-div">
-    <div class="stats-main-div">
-        <div class="stats-title">Stats</div>
-        <div class="stats-player-profile-div">
+<div class="stats-container-div"><!--COntainer-ul-->
+    <div class="stats-main-div"><!--Div-ul principal-->
+        <div class="stats-title">Stats</div><!--Titlul-->
+        <div class="stats-player-profile-div"><!--Profilul jucatorului-->
             <img src="/images/profiles/k1.png" class="stats-profile-pic"/>
             <p class="stats-username-player" style="margin-bottom: 0">> Kit Kat</p>
             <p class="stats-profile-text" style="margin-bottom: 0;">Level: </p>
