--- a/Yeoman/app/views/stats.html
+++ b/Yeoman/app/views/stats.html
@@ -1,4 +1,4 @@
-<div class="stats-container-div"><!--COntainer-ul-->
+<div class="stats-container-div"><!--Container-ul-->
     <div class="stats-main-div"><!--Div-ul principal-->
         <div class="stats-title">Stats</div><!--Titlul-->
         <div class="stats-player-profile-div"><!--Profilul jucatorului-->
