--- a/Yeoman/app/views/about.html
+++ b/Yeoman/app/views/about.html
@@ -1,1 +1,16 @@
-<p>This is the about view.</p>
+<div class="stats-container-div"><!--Container-ul-->
+    <div class="stats-main-div"><!--Div-ul principal-->
+
+        <div class="stats-player-profile-div">
+
+        <h4>
+          Fun@Web este (sau, mai corect spus, va fi) un joc multiplayer care ii va ajuta pe cei doritori sa isi imbunatateasca si testeze cunostintele legate de cele mai importante concepte predate la Tehnologii Web.
+        </h4>
+
+        <h4>
+          In curand, jocul va fi disponibil pe Facebook si va putea fi accesibil si de pe telefoanele mobile.
+        </h4>
+
+        </div>
+    </div>
+</div>
