--- a/Yeoman/app/styles/main.scss
+++ b/Yeoman/app/styles/main.scss
@@ -2,6 +2,10 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
+.container{
+  margin: 0;
+  padding: 0;
+}
 
 .browsehappy {
   margin: 0.2em 0;
@@ -9,6 +13,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   color: #000;
   padding: 0.2em 0;
 }
+
 body {
   padding: 0;
   margin: 0;
@@ -27,7 +32,11 @@ body {
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
+  // visibility: hidden;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 
   /* Make the masthead heading the same height as the navigation */
   h3 {
@@ -74,7 +83,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    // max-width: 768px;
     margin: 0;
     padding: 0;
     border: 0;
@@ -91,7 +100,7 @@ body {
   }
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
