--- a/Yeoman/app/views/about.html
+++ b/Yeoman/app/views/about.html
@@ -3,13 +3,31 @@
 
         <div class="stats-player-profile-div">
 
-        <h4>
-          Fun@Web este (sau, mai corect spus, va fi) un joc multiplayer care ii va ajuta pe cei doritori sa isi imbunatateasca si testeze cunostintele legate de cele mai importante concepte predate la Tehnologii Web.
-        </h4>
+          <h1> Proiect la Tehnologii Web, anul 2017. Noi suntem:</h1>
+          <ul>
+            <li>
+              Lucian Filimon
+            </li>
+            <li>
+              Vladimir Procop
+            </li>
+            <li>
+              Victor Talif
+            </li>
+            <li>
+              Andrei Palihovici
+            </li>
+          </ul>
 
-        <h4>
+
+
+        <h2>
+          Fun@Web este (sau, mai corect spus, va fi) un joc multiplayer care ii va ajuta pe cei doritori sa isi imbunatateasca si testeze cunostintele legate de cele mai importante concepte predate la Tehnologii Web.
+        </h2>
+
+        <h2>
           In curand, jocul va fi disponibil pe Facebook si va putea fi accesibil si de pe telefoanele mobile.
-        </h4>
+        </h2>
 
         </div>
     </div>
