--- a/Yeoman/app/views/main.html
+++ b/Yeoman/app/views/main.html
@@ -11,12 +11,18 @@
 
 </div> -->
 
-<html>
-<body>
+<head>
+  <link rel="stylesheet" href="styles/mystats.css" >
+
+</head>
+<div class="stats-main-div" >
+
+<div class="stats-player-profile-div" style="width:50vw">
 
 <h1> Bine ai venit la fun@web!</h1>
 <h2> Acest joc isi propune sa te ajute sa iti insusesti concepte de Web intr-o maniera interactiva si distractiva.</h2>
-<h2> Foloseste meniul din partea de sus pentru a naviga. Butonul My Stats iti va arata statisticile, Leaderboard, unde te situezi in raport cu ceilalti, iar Play te va arunca direct in joc! </h2>
+<h2> Foloseste meniul din partea de sus pentru a naviga.
+  Butonul My Stats iti va arata statisticile, Leaderboard, unde te situezi in raport cu ceilalti, iar Play te va arunca direct in joc! </h2>
 
-</body>
-</html>
+</div>
+</div>
