--- a/Yeoman/app/styles/mystats.css
+++ b/Yeoman/app/styles/mystats.css
@@ -16,7 +16,7 @@
     font-family: "FreeSans", sans-serif;
     text-align: center;
     font-size: 2vw;
-    background-image: url('/images/backgrounds/circuit.jpg');
+    background-image: url('/images/backgrounds/tile.png');
     clear: both;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
