--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -2,7 +2,7 @@
 
   <div class="home-player-profile-div" style="width:50vw">
 
-    <h1 style="font-weight: bolder; font-size: 5vmin;"> Welcome to Fun@Web !</h1>
+    <h1 style="font-weight: bolder; font-size: 5vmin;"> Welcome to Fun@Web {{formula}} {{fullName}}!</h1>
     <h3 class="home-h3">This web application is a simple multi-player game that should be played by anyone who wants to become a better web-developer.</h3>
     <h3 class="home-h3">Fun@Web can only be played in pairs of players, making it the perfect place to strengthen your bonds.</h3>
     <h3 class="home-h3">Do not be fooled by the extremely
