--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -4,7 +4,7 @@
 
     Welcome to Fun@Web<br></br>
 
-    <a ng-href="/#!/home">
+    <a  href="http://localhost:3000/auth/facebook">
 
       <button class="login-button">
         First, you will have to log-in with your Facebook account!
