Login FB, Fara BD. Adaugate elemente de securitate

--- a/client/app/styles/play.css
+++ b/client/app/styles/play.css
@@ -247,6 +247,42 @@
   100% { transform: rotate(360deg); }
 }
 
+/* ------------------TIMER--------------------------- */
+.timer-h1{
+  color: #396;
+  font-weight: 100;
+  font-size: 40px;
+  margin: 40px 0px 20px;
+}
+
+#clockdiv{
+    font-family: sans-serif;
+    color: #fff;
+    display: inline-block;
+    font-weight: 100;
+    text-align: center;
+    font-size: 30px;
+}
+
+#clockdiv > div{
+    padding: 10px;
+    border-radius: 3px;
+    background: #00BF96;
+    display: inline-block;
+}
+
+#clockdiv div > span{
+    padding: 15px;
+    border-radius: 3px;
+    background: #00816A;
+    display: inline-block;
+}
+
+.smalltext{
+    padding-top: 5px;
+    font-size: 16px;
+}
+
 @media all and (orientation: portrait) {     /*Cand utilizatorul foloseste site-ul in mod portrait pe telefon/tableta, atunci apar cateva modificari*/
     /*Div-ul incare vor apare raspunsurile posibile*/
   .play-footer-div {
