--- a/client/app/views/play.html
+++ b/client/app/views/play.html
@@ -31,6 +31,14 @@
         </div>
       </div>
 
+      <!-- <h1 class="timer-h1">Countdown Clock</h1>
+      <div id="clockdiv">
+        <div>
+          <span class="seconds"></span>
+          <div class="smalltext">Time left:</div>
+        </div>
+      </div> -->
+
       <!-- div-ul play-middle-parent2 contine elementele din partea dreapta a ecranului de joc: butonul 'Enemies' si div-ul care apare dupa apasarea acestui buton; -->
       <div class="play-middle-parent2" style="display: inline-flex">
         <!-- div-ul play-current-players-div apare in dreapta ecranului la apasarea butonului play-enemies-button si afiseaza o lista cu inamicii  -->
