--- a/db-goes-here/views/newquest.jade
+++ b/db-goes-here/views/newquest.jade
@@ -3,29 +3,33 @@ extends layout
 block content
 	h3=title
 	form#form_add_question(name="addquestion", method="post",action="/addquestion")
-		span Question
+		span quest
 		span &nbsp;
 		input#input_question(type="text", placeholder="quest", name="quest")
 		br
 		br
-		span A1
+		span a1
 		span &nbsp;
 		input#input_a1(type="text", placeholder="a1", name="a1")
 		br
 		br
-		span A2
+		span a2
 		span &nbsp;
 		input#input_a2(type="text", placeholder="a2", name="a2")
 		br
 		br
-		span A3
+		span a3
 		span &nbsp;
 		input#input_a3(type="text", placeholder="a3", name="a3")
 		br
 		br
-		span Rightanswer
+		span rightanswer
 		span &nbsp;
 		input#input_rightanswer(type="text", placeholder="rightanswer", name="rightanswer")
+		br
+		span diff
+		span &nbsp;
+		input#input_diff(type="text", placeholder="diff", name="diff")
 		br
 		br
 		button#submit_question(type="submit") submit
