--- a/db-goes-here/views/quest.jade
+++ b/db-goes-here/views/quest.jade
@@ -6,4 +6,4 @@ block content
 	ul
 		each questions, i in quest
 			li#quest_item
-				a(href="#")	#{questions.question}	with answers #{questions.a1} #{questions.a2} #{questions.a3}
+				a(href= "#")	#{questions.question}	with answers #{questions.a1} #{questions.a2} #{questions.a3} #{questions.rightanswer} #{questions.diff}
