Adaugare buton de postat pe Facebook + imbunatatiri

--- a/client/app/views/play.html
+++ b/client/app/views/play.html
@@ -44,7 +44,7 @@
         <!-- div-ul play-current-players-div apare in dreapta ecranului la apasarea butonului play-enemies-button si afiseaza o lista cu inamicii  -->
         <div class="play-current-enemy-div" id="player-enemy-id" data-ng-click="setEnemiesVisible()">
           <!-- lista cu inamicii, ordered list -->
-          <img src="/images/profiles/ocelot.jpg" class="play-profile-pic" id="enemy-image-id" alt="Imagine indisponibila"/> <!--"/images/profiles/ocelot.jpg"-->
+          <img src="/images/profiles/postman.png" class="play-profile-pic" id="enemy-image-id" alt="Imagine indisponibila"/> <!--"/images/profiles/ocelot.jpg"-->
           <p class="play-username-p" style="margin: 0; padding: 0;"> {{enemyName}}</p>
           <p class="play-profile-text" style="margin: 0; padding: 0;">{{enemyScore}} points</p>
           <p class="play-profile-text" style="margin: 0; padding: 0;">This is your game with number: 99</p>
