--- a/client/app/views/stats.html
+++ b/client/app/views/stats.html
@@ -1,7 +1,7 @@
 <div class="stats-container-div"><!--Container-ul-->
     <div class="stats-main-div"><!--Div-ul principal-->
         <div class="stats-title" style="font-weight: bolder;">My statistics</div><!--Titlul-->
-        <h2 id="winning-h2" style="font-size: 5vmin; background-color: ;">~{{deznodamant}}~</h2>
+        <h2 id="winning-h2" style="font-size: 5vmin; background-color: ;">{{deznodamant}}</h2>
         <div class="stats-player-profile-div"><!--Profilul jucatorului-->
             <img src="/images/profiles/k1.png" class="stats-profile-pic"/>
             <p class="stats-username-player"> Kit Kat</p>
@@ -11,6 +11,9 @@
             <p class="stats-profile-text">157</p><br />
             <p class="stats-profile-text">Maximum score: </p>
             <p class="stats-profile-text">238</p>
+            <button type="button" class="btn btn-primary btn-block" style="display=block" data-ng-click="postToFacebook()">
+              Post about us on Facebook !</button>
         </div>
+
     </div>
 </div>
